vault only access through domain name now

--- a/vaultwarden/nginx.conf
+++ b/vaultwarden/nginx.conf
@@ -28,9 +28,15 @@ http{
       listen [::]:80;
       server_name vaultwarden.home.tm;
 
+      # Reject all requests not using vaultwarden.home.tm
+      if ($host != "vaultwarden.home.tm") {
+        return 403;
+      }
+
+      # Redirect to HTTPS for vaultwarden.home.tm
       if ($host = vaultwarden.home.tm) {
         return 301 https://$host$request_uri;
-    }
+      }
 
       return 404;
   }
@@ -50,6 +56,11 @@ http{
       #ssl_ciphers HIGH:!aNULL:!MD5;
 
       client_max_body_size 525M;
+      
+      # Ensure only requests with the correct Host header are allowed
+      if ($host != "vaultwarden.home.tm") {
+        return 403;
+      }
 
       location / {
         proxy_http_version 1.1;
