--- a/vaultwarden/nginx.conf
+++ b/vaultwarden/nginx.conf
@@ -1,5 +1,5 @@
 events {
-    worker_connections 10;
+    worker_connections 1024;
 }
 
 http{
@@ -26,15 +26,15 @@ http{
   server {
       listen 80;
       listen [::]:80;
-      server_name vaultwarden.home.tm;
+      server_name vaultwarden.example.com;
 
-      # Reject all requests not using vaultwarden.home.tm
-      if ($host != "vaultwarden.home.tm") {
+      # Reject all requests not using vaultwarden.example.com
+      if ($host != "vaultwarden.example.com") {
         return 403;
       }
 
-      # Redirect to HTTPS for vaultwarden.home.tm
-      if ($host = vaultwarden.home.tm) {
+      # Redirect to HTTPS for vaultwarden.example.com
+      if ($host = vaultwarden.example.com) {
         return 301 https://$host$request_uri;
       }
 
@@ -46,7 +46,7 @@ http{
       listen 443 ssl;
       listen [::]:443 ssl;
       http2 on;
-      server_name vaultwarden.home.tm;
+      server_name vaultwarden.example.com;
 
       # Specify SSL Config when needed
       ssl_certificate /etc/nginx/ssl/vaultwarden.crt;
@@ -57,8 +57,13 @@ http{
 
       client_max_body_size 525M;
       
+      # Allow requests only from the reverse proxy
+      # Replace with the IP of your reverse proxy
+      allow <reverse_proxy_ip>;
+      deny all;
+      
       # Ensure only requests with the correct Host header are allowed
-      if ($host != "vaultwarden.home.tm") {
+      if ($host != "vaultwarden.example.com") {
         return 403;
       }
 
